# axum-rest-service

./: .env  .gitignore  Cargo.toml  README.md
distribution/dev/: docker-compose.yaml
distribution/dev/database/: init.sql
src/: main.rs
src/api/: Cargo.toml
src/api/src/: lib.rs  state.rs
src/api/src/db/: index.rs
src/api/src/state/: index.rs
src/bootstrap/: Cargo.toml
src/bootstrap/src/: lib.rs
src/bootstrap/src/lifecyrcle/: init.rs  mod.rs  start.rs
src/repository/: Cargo.toml
src/repository/migrations/: 202301251200__create_table__users.sql  20230129__create_table__users.sql  202302040000__create_table__queations.sql  202302040100__create_table__answers.sql
src/repository/src/: lib.rs  migrations.rs
src/repository/src/db/: health_check.rs  migrations.rs  mod.rs
src/repository/src/domain/: from_pg_row.rs  mod.rs  question.rs  user.rs
src/repository/src/modules/: mod.rs
src/repository/src/modules/persistence/: init.rs
src/repository/src/modules/repository/: health_check.rs
src/repository/src/repository/: answer.rs  mod.rs  question.rs  question_repository.rs  user_repository.rs
src/service/: Cargo.toml
src/service/src/: lib.rs  question.rs  question_service.rs
src/service/src/question/: mod.rs  question_dto.rs  question_service.rs
src/service/src/user/: mod.rs  user_dto.rs  user_service.rs
src/utils/: Cargo.toml
src/utils/src/: lib.rs
src/utils/src/core/: cache.rs  context.rs  db.rs  hash.rs  jwt.rs  logger.rs  mod.rs  server.rs
src/utils/src/dto/: mod.rs  token_payload.rs
src/utils/src/error/: app_error.rs  app_repository_error.rs  app_service_error.rs  app_web_error.rs  mod.rs
src/web/: Cargo.toml
src/web/src/: lib.rs  question.rs  server.rs
src/web/src/middlewares/: auth.rs  mod.rs
src/web/src/middlewares/dto/: user.rs
src/web/src/routes/: mod.rs
src/web/src/routes/question/: dto.rs  handlers.rs  index.rs  mod.rs  routes.rs
src/web/src/routes/user/: dto.rs  handlers.rs  mod.rs  routes.rs
src/web/src/server/: index.rs
src/web/src/utils/: error.rs  mod.rs  user.rs
