[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
repository = { path = "../repository"}
web = { path = "../web" }
api = { path = "../api" }
axum = { version = "0.6.2", features = ["headers", "macros"] }
chrono = "0.4.23"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["cors"] }
validator = { version = "0.16.0", features = ["derive"] }
sea-orm = { version = "0.10.5", features = ["runtime-tokio-rustls", "macros"] }
dotenvy = "0.15.6"