[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
service = {path = "../service"}
axum = { version = "0.6.2", features = ["headers", "macros"] }
chrono = "0.4.23"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["cors"] }
validator = { version = "0.16.0", features = ["derive"] }
sea-orm = { version = "0.10.5", features = ["runtime-tokio-rustls", "macros"] }
dotenvy = "0.15.6"
serde_with = "2.2.0"
bcrypt = "0.13.0"
tracing = "0.1.37"
jsonwebtoken = "8.2.0"

